--- a/qgisfeedproject/templates/feeds/feed_item_confirmation.html
+++ b/qgisfeedproject/templates/feeds/feed_item_confirmation.html
@@ -36,7 +36,7 @@
             </button>
 
             {% elif not published and user_is_approver and form.instance.pk%}
-            <button class="button is-success" type="submit" form="feedItemForm" name="publish" value="true">
+            <button class="button is-success" type="submit" form="feedItemForm" name="publish" value="1">
                 <span class="icon">
                     <i class="fa fa-check" aria-hidden="true"></i>
                 </span>
